discussion/kv_engine/125163/125163_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-38326: Refactor magma MetaData and MagmaRequest

Move these to separate files.

This is for preparation of the real fix that needs access to
MagmaRequest to support Mock testing.

Change-Id: I5ee6575655df73e121ff0d56b54cf98108f51901

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2020-04-08 00:51:06.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-04-08 01:47:37.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27392/ : FAILURE

Failure of a CTest test 377/383 Test #380: cluster_test .................................................................................................................. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27392/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1610/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:25:29: error: expected class name [clang-diagnostic-error]
class MagmaRequest : public IORequest {
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:45:16: error: use of undeclared identifier "key" [clang-diagnostic-error]
        return key.size();
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:49:46: error: use of undeclared identifier "key" [clang-diagnostic-error]
        return reinterpret_cast<const char*>(key.data());
                                             ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1610/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:25:29:
error: expected class name [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1610/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/129/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23433/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3080/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3016/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2072/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/10877/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3024/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2020-04-08 08:51:51.000000000
Message: 
Patch Set 2: Code-Review-1

(4 comments)

Just a few suggestions to reduce header bloat/improve compilation times
Line:26, engines/ep/src/magma-kvstore/magma-kvstore.h -> You should be able to put this in the .cc

Line:29, engines/ep/src/magma-kvstore/magma-kvstore.h -> same as above

Line:34, engines/ep/src/magma-kvstore/magma-kvstore.h -> I think that MagmaKVStoreConfig can still be a forward declaration and the include is not necessary

Line:543, engines/ep/src/magma-kvstore/magma-kvstore.h -> Is moving these necessary?

----------------------------------------------------------------------------------------------------------------------
Author: Scott Lashley
Date: 2020-04-08 14:26:19.000000000
Message: 
Patch Set 2:

(4 comments)
Line:26, engines/ep/src/magma-kvstore/magma-kvstore.h -> Done

Line:29, engines/ep/src/magma-kvstore/magma-kvstore.h -> Done

Line:34, engines/ep/src/magma-kvstore/magma-kvstore.h -> Done

Line:543, engines/ep/src/magma-kvstore/magma-kvstore.h -> Git merge did that!
Done

----------------------------------------------------------------------------------------------------------------------
